<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.uuid.slf4j</groupId>
	<artifactId>slf4j-android</artifactId>
	<version>2.0.10-1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>slf4j-android</name>
	<description>SLF4J binding for the Android logger</description>
	<url>https://github.com/nomis/slf4j-android/wiki</url>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
		<relativePath />
	</parent>
	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/license/mit/</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/nomis/slf4j-android.git</connection>
		<url>https://github.com/nomis/slf4j-android/</url>
		<developerConnection>scm:git:ssh://git@github.com/nomis/slf4j-android.git</developerConnection>
	</scm>
	<organization>
		<name>Simon Arlott</name>
	</organization>
	<developers>
		<developer>
			<id>uk.me.sa</id>
			<name>Simon Arlott</name>
			<url>https://sa.me.uk/</url>
		</developer>
	</developers>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>android</artifactId>
			<version>2.1.2</version><!-- API version 1: do not upgrade -->
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito2</artifactId>
			<version>2.0.9</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>2.0.9</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.btmatthews.hamcrest</groupId>
			<artifactId>hamcrest-matchers</artifactId>
			<version>1.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>annotations</artifactId>
			<version>3.0.1u2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<source>${maven.compiler.source}</source>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>animal-sniffer-maven-plugin</artifactId>
				<version>1.23</version>
				<configuration>
					<signature>
						<groupId>org.codehaus.mojo.signature</groupId>
						<artifactId>java15</artifactId>
						<version>1.0</version>
					</signature>
					<checkTestClasses>false</checkTestClasses>
				</configuration>
				<executions>
					<execution>
						<id>animal-sniffer</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.8.2.0</version>
				<configuration>
					<excludeFilterFile>spotbugs-security-exclude.xml</excludeFilterFile>
					<effort>Max</effort>
					<includeTests>true</includeTests>
					<threshold>Low</threshold>
				</configuration>
				<executions>
					<execution>
						<id>spotbugs</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<id>jacoco</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.3</version>
					<configuration>
						<parallel>methods</parallel>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.2.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.3.2</version>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.8.2.0</version>
				<configuration>
					<excludeFilterFile>spotbugs-security-exclude.xml</excludeFilterFile>
					<effort>Max</effort>
					<fork>false</fork>
					<includeTests>true</includeTests>
					<threshold>Low</threshold>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- animal-sniffer is unable to process icu4j-2.6.1 because of an invalid class file: https://unicode-org.atlassian.net/browse/ICU-6505 -->
				<groupId>com.ibm.icu</groupId>
				<artifactId>icu4j</artifactId>
				<version>[2.8,)</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<profiles>
		<profile>
			<id>target-6</id>
			<activation>
				<jdk>(,9)</jdk>
			</activation>
			<properties>
				<maven.compiler.source>6</maven.compiler.source>
				<maven.compiler.target>6</maven.compiler.target>
			</properties>
		</profile>
		<profile>
			<id>release-9</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<maven.compiler.source>9</maven.compiler.source>
				<maven.compiler.target>9</maven.compiler.target>
				<maven.compiler.release>9</maven.compiler.release>
			</properties>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-compiler-plugin</artifactId>
							<executions>
								<execution>
									<id>module-compile</id>
									<phase>compile</phase>
									<goals>
										<goal>compile</goal>
									</goals>
									<configuration>
										<release>9</release>
										<compileSourceRoots>
											<compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
										</compileSourceRoots>
										<multiReleaseOutput>true</multiReleaseOutput>
									</configuration>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>add-opens</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<configuration>
								<argLine>
									@{argLine}
									--add-opens java.base/java.lang=ALL-UNNAMED
									--add-opens java.base/java.net=ALL-UNNAMED
									--add-opens java.base/java.io=ALL-UNNAMED
									--add-opens java.base/java.util=ALL-UNNAMED
									--add-opens java.base/java.util.concurrent=ALL-UNNAMED
								</argLine>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>
